<resources>
    <string name="app_name">Santa Claus Simulator</string>
    <string name="continuer">Continue</string>
    <string name="village">Santa\'s Village</string>
    <string name="finances">Finances</string>
    <string name="traineau">Sledges</string>
    <string name="infra">Infrastructures</string>
    <string name="lutins">Helpers</string>
    <string name="tour">Christmas route</string>
    <string name="budget">Budget: </string>
    <string name="jours">Days \'til Christmas: </string>
    <string name="reputa">Reputation : </string>
    <string name="cadeau">Gifts already made: </string>
    <string name="nouvellePartie">New game</string>
    <string name="credits">Credits</string>
    <string name="conception">Development</string>
    <string name="graphismes">Graphics</string>
    <string name="trad">Translations</string>
    <string name="music">Sounds and musics</string>
    <string name="real">Product by</string>
    <string name="valb">Valere Brable</string>
    <string name="avalb">Valere Brable</string>
    <string name="floj">Florian Justes</string>
    <string name="julc">Julien Canty</string>
    <string name="sasu">Samu Suutarinen</string>
    <string name="adbo">Adrien Bouillon</string>
    <string name="magiks">Magik Studio - Magical Snow</string>
    <string name="femtifire">FemtiFire</string>
    <string name="exist">false</string>
    <string name="banque">Bank</string>
    <string name="investisseurs">Investors</string>
    <string name="accord">Financial deal signed. You earn: </string>
    <string name="pret">You get a loan of: </string>
    <string name="remb">With the current interest rate, you will repay at Christmas an amount of: </string>
    <string name="noter">Rate the app</string>
    <string name="ib">Link to Brabley Apps Facebook page</string>
    <string name="consort">A consortium accepts to invest an amount of: </string>
    <string name="nope">You don\'t succeed to convince investors. A higher reputation could be useful&#8230;</string>
    <string name="accepter">Agree</string>
    <string name="refus">Disagree</string>
    <string name="dejaPret">You\'ve already got a loan from the bank.</string>
    <string name="hire">Hire</string>
    <string name="fire">Fire</string>
    <string name="salair">Wages</string>
    <string name="nbLut">Helpers:</string>
    <string name="salParLut">Wage per helper:</string>
    <string name="combien1">How many helpers do you want to hire?</string>
    <string name="combien2">How many helpers do you want to fire?</string>
    <string name="confirm">Confirm</string>
    <string name="motivation">Motivation:</string>
    <string name="vnpp">You can\'t fire more helpers than you have!</string>
    <string name="modifSal">How much to you want to pay daily to your helpers?</string>
    <string name="salBas">You can\'t give less than the minimum wage to your helpers</string>
    <string name="supprimer">You already have a game existing. Do you want to delete it? This action is irreversible.</string>
    <string name="back">Back to menu</string>
    <string name="toastSal">Wages modified!</string>
    <string name="toastEmb">Helpers hired!</string>
    <string name="toastVir">Helpers fired!</string>
    <string name="actImp">Impossible action</string>
    <string name="annuler">Cancel</string>
    <string name="ok">Yes</string>
    <string name="invalide">Please enter a value</string>
    <string name="warning">Warning!</string>
    <string name="upgrade">Upgrade</string>
    <string name="atelier">Santa\'s workshop</string>
    <string name="siege">Headquarters</string>
    <string name="rd">Research and development</string>
    <string name="niveau">Level: </string>
    <string name="ateP">Workshop upgraded!</string>
    <string name="siegeP">Headquarters upgraded!</string>
    <string name="rdP">Research and development upgraded!</string>
    <string name="cost">Upgrade cost: </string>
    <string name="at1">Cabin in Lapland</string>
    <string name="at2">Chalet in maple wood</string>
    <string name="at3">Boathouse</string>
    <string name="at4">Warehouse</string>
    <string name="at5">Industrial building</string>
    <string name="at6">Small factory</string>
    <string name="at7">Big factory</string>
    <string name="at8">Factories scattering</string>
    <string name="at9">Relocation to China</string>
    <string name="at10">Industrial empire</string>
    <string name="s1">Dividing walls</string>
    <string name="s2">Basic hut</string>
    <string name="s3">Windowless office</string>
    <string name="s4">Haunted house</string>
    <string name="s5">Business incubator</string>
    <string name="s6">Small building</string>
    <string name="s7">Big building</string>
    <string name="s8">Big building with a swimming pool</string>
    <string name="s9">Palace in the Bahamas</string>
    <string name="s10">Lunar base</string>
    <string name="r1">Develowhat? Don\'t know this word&#8230;</string>
    <string name="r2">Bookcase from Ikea</string>
    <string name="r3">Computer running with Windows 95</string>
    <string name="r4">Public library</string>
    <string name="r5">Computers room of rhe elementary school of Rovaniemi</string>
    <string name="r6">Modest research center</string>
    <string name="r7">Advanced research center</string>
    <string name="r8">Self-developed laboratory</string>
    <string name="r9">Worldwide nerve center of innovation</string>
    <string name="r10">Center of the world</string>
    <string name="sp1">Harnessing the reindeers</string>
    <string name="sp2">Waking up the helpers</string>
    <string name="sp3">Opening of the workshop</string>
    <string name="sp4">Hanging on the tinsels</string>
    <string name="sp5">Baking cookies</string>
    <string name="fun">Number of people celebrating Christmas:</string>
    <string name="deli">Hire delivery boys</string>
    <string name="trai">Buy sledges</string>
    <string name="com1">How many delivery boys do you want to hire?</string>
    <string name="com2">How many sledges do you want to buy?</string>
    <string name="embL">Delivery boys hired</string>
    <string name="achT">Sledges purchased</string>
    <string name="nbLi">Number of delivery boys:</string>
    <string name="nbTr">Number of sledges:</string>
    <string name="expLiv">Because Santa is only human, delivery boys are essentials to help you to deliver billions of gifts around the world. They are hired only for the night of Christmas, you have to re-hire them every year and pay them 60 per day and 1000 each the night of Christmas.</string>
    <string name="expTr">Without sledges, your delivery boys won\'t be able to do their job! Buy enough sledges for all your delivery boys. Each sledge costs 10000.</string>
    <string name="vit">Speed</string>
    <string name="cont">Capacity</string>
    <string name="appa">Appearance</string>
    <string name="vitEx">The sledges could do more return trips</string>
    <string name="contEx">The sledges could carry more gifts</string>
    <string name="appaEx">Take care to your sledges appearance help you to increase your reputation</string>
    <string name="ameliorer">What do you want to upgrade?</string>
    <string name="vitAug">Speed increased!</string>
    <string name="contAug">Capacity increased!</string>
    <string name="appaAug">Appearance improved!</string>
    <string name="rennes">Buy reindeers</string>
    <string name="nbRe">Number of reindeers:</string>
    <string name="costR">Each reindeer costs 5000 to buy and 10 per day to maintain. How much do you want?</string>
    <string name="renA">Reindeers purchased!</string>
    <string name="budgetInsu">You don\'t have enough money!</string>
    <string name="alleretour">Number of possibles return trips:</string>
    <string name="contActu">Current capacity:</string>
    <string name="appaActu">Swag level:</string>
    <string name="gameOver">Game Over</string>
    <string name="faillite">You\'ve gone into bankruptcy.</string>
    <string name="pasPop">You are not popular enough.</string>
    <string name="survive">You have survived</string>
    <string name="joursGO">days</string>
    <string name="vousaimez">Do you like this app?</string>
    <string name="noubliepas">Don\'t forget to rate it!</string>
    <string name="neplus">Do not ask me again</string>
    <string name="later">Later</string>
    <string name="tournee">Currently delivering.</string>
    <string name="patient">Please wait a moment&#8230;</string>
    <string name="bilan1">Gifts delivered:</string>
    <string name="bilan2">Congratulations! Christmas is an awesome success!</string>
    <string name="bilan3">Not bad, Christmas is a success.</string>
    <string name="bilan4">It was not the best Christmas of my life. You\'ll do better next year.</string>
    <string name="bilan5">This Christmas was awful! You are a very bad Santa!</string>
    <string name="bilan">Assessment</string>
    <string name="dac">OK</string>
    <string name="logo">Logo</string>
    <string name="epid">An epidemic decimates your elk herd.</string>
    <string name="rennesTue">Dead reindeers:</string>
    <string name="rennesRes">Reindeers still alive:</string>
    <string name="traineau1">Your goblins damaged some of your sledges by doing a race.</string>
    <string name="traineau2">Damaged sledges:</string>
    <string name="traineau3">Remaining sledges:</string>
    <string name="mamie">Your grandma sent you a greeting card. That\'s it&#8230;</string>
    <string name="interdit">Following the signing of an international treaty, Christmas is forbidden in several countries.</string>
    <string name="interdit2">People now celebrating Christmas:</string>
    <string name="scandale1">Involved in a financial scandal, you have to pay a fine of:</string>
    <string name="scandale2">New budget:</string>
    <string name="neymar">Just for fun, you buy Neymar for 220 millions.</string>
    <string name="greve">Your helpers are unhappy and begin a strike. The gifts production is stuck.</string>
    <string name="grevend">The strike is over!</string>
    <string name="grevend2">The helpers are satisfied and go back to work.</string>
    <string name="lutinsengrev">Warning! Helpers in strike!</string>
    <string name="destruct1">A fire ravages your workshop.</string>
    <string name="destruct2">An explosion destructs your research and development center.</string>
    <string name="destruct3">A plane crashes in your headquarters.</string>
    <string name="ydh1">You don\'t have yet a workshop.</string>
    <string name="ydh2">You don\'t have yet a research and development center.</string>
    <string name="ydh3">You don\'t have yet headquarters.</string>
    <string name="build">Build</string>
    <string name="line">_____________________________________________</string>
    <string name="error">Brabley Apps is deeply sorry for the possible translations errors</string>
    <string name="lang">Language</string>
    <string-array name="languages">
        <item>Language</item>
        <item>Français</item>
        <item>English</item>
        <item>Español</item>
        <item>Italiano</item>
        <item>Norske</item>
    </string-array>
</resources>
